--- a/JAVASCRIPT-SANDBOX/08_strings/index.html
+++ b/JAVASCRIPT-SANDBOX/08_strings/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stack_And_Heap_Memory</title>
+    <title>Strings In JS</title>
 </head>
 <body>
-    <h1>Stack_And_Heap_Memory</h1>
+    <h1>Strings In JS</h1>
     <script src="script.js"></script>
 </body>
 </html>
